Update to Java 10.